mywork/force-app/main/default/objects/Backlog_Item_Task__c/Backlog_Item_Task__c.object-meta.xml
<CustomObject>
    <label>Backlog Item Task</label>
    <nameField>
        <displayFormat>Backlog-Item-Task-{00000}</displayFormat>
        <label>Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backlog Item Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>