mywork/force-app/main/default/objects/Backlog_Item_Task__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Assigned To</label>
    <referenceTo>ALM_User__c</referenceTo>
    <relationshipLabel>Backlog Item Tasks</relationshipLabel>
    <relationshipName>Backlog_Item_Tasks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>