mywork/force-app/main/default/objects/Backlog_Item_Task__c/fields/Backlog_Item__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Item__c</fullName>
    <label>Backlog Item</label>
    <referenceTo>Backlog__c</referenceTo>
    <relationshipLabel>Backlog Item Tasks</relationshipLabel>
    <relationshipName>Backlog_Item_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>