mywork/force-app/main/default/objects/Backlog_Item_Task__c/fields/Effort__c.field-meta.xml
<CustomField>
    <fullName>Effort__c</fullName>
    <label>Effort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>